--- a/profile.css
+++ b/profile.css
@@ -61,16 +61,14 @@
 .v44_113 {
   width: 297px;
   height: 365px;
-  background: rgba(255,255,255,1);
+  background: url("sharon.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
   opacity: 1;
   position: absolute;
   top: 102px;
   left: 936px;
-  border-top-left-radius: 59px;
-  border-top-right-radius: 59px;
-  border-bottom-left-radius: 59px;
-  border-bottom-right-radius: 59px;
-  box-shadow: 0px 4px 4px rgba(0.5096875429153442, 0.590506911277771, 0.970833420753479, 1);
   overflow: hidden;
 }
 .v100_3 {
@@ -254,3 +252,5 @@
   left: 16px;
   overflow: hidden;
 }
+
+
